# dawn

./: .gitignore  BUILD.gn  DEPS  dawn.json  webnn.json  webnn_wire.json
build_overrides/: dawn.gni  webnn.gni
docs/: codegen.md
generator/: dawn_generator.gni  dawn_json_generator.py
generator/templates/: api.h  api_cpp.h  dawn_proc.c  dawn_proc_table.h  dawn_thread_dispatch_proc.cpp
generator/templates/dawn_native/: ProcTable.cpp  api_absl_format.cpp  api_structs.cpp  api_structs.h  dawn_platform.h
generator/templates/dawn_wire/client/: ApiProcs.cpp  ClientBase.h
generator/templates/dawn_wire/server/: ServerBase.h
generator/webnn/: webnn_generator.gni  webnn_json_generator.py
generator/webnn/templates/: mock_webnn.h  webnn_cpp.cpp  webnn_cpp.h  webnn_proc.c  webnn_proc_table.h
generator/webnn/templates/webnn_native/: ProcTable.cpp  ValidationUtils.cpp  ValidationUtils.h  webnn_structs.cpp  webnn_structs.h
scripts/: dawn_overrides_with_defaults.gni
src/dawn/native/: BUILD.gn  Device.cpp  Device.h  FusionOperator.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  NamedOperands.h  NamedRecords.h  NamedResources.h  Operand.cpp  Operand.h  Operator.cpp  Operator.h
src/dawn/native/dml/: GraphBuilderDML.cpp  GraphBuilderDML.h  GraphDML.cpp  GraphDML.h
src/dawn/native/ops/: BatchNorm.cpp  BatchNorm.h  Binary.cpp  Binary.h  Clamp.h  Concat.cpp  Concat.h  Constant.h  Conv2d.cpp  Conv2d.h  Gemm.cpp  Gemm.h  Input.h  LeakyRelu.h  Pad.cpp  Pad.h  Pool2d.cpp  Pool2d.h  Reduce.cpp  Reduce.h  Resample2d.cpp  Resample2d.h  Reshape.cpp  Reshape.h  Transpose.cpp  Transpose.h  Unary.cpp  Unary.h
src/dawn/webnn/: BUILD.gn
src/dawn_native/: BUILD.gn  CommandEncoder.cpp  CommandEncoder.h  Commands.cpp  Commands.h  Device.cpp  Device.h  Forward.h  FusionOperator.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  NamedOperands.h  NamedRecords.h  NamedResources.h  Operand.cpp  Operand.h  Operator.cpp  Operator.h  webgpu_absl_format.h
src/dawn_native/d3d12/: CommandBufferD3D12.cpp
src/dawn_native/dml/: GraphBuilderDML.cpp  GraphBuilderDML.h  GraphDML.cpp  GraphDML.h
src/dawn_native/metal/: BufferMTL.mm  CommandBufferMTL.mm  DeviceMTL.h  DeviceMTL.mm  MetalBackend.mm
src/dawn_native/ops/: BatchNorm.cpp  BatchNorm.h  Binary.cpp  Binary.h  Clamp.h  Concat.cpp  Concat.h  Constant.h  Conv2d.cpp  Conv2d.h  Gemm.cpp  Gemm.h  Input.h  LeakyRelu.h  Pad.cpp  Pad.h  Pool2d.cpp  Pool2d.h  Reduce.cpp  Reduce.h  Resample2d.cpp  Resample2d.h  Reshape.cpp  Reshape.h  Transpose.cpp  Transpose.h  Unary.cpp  Unary.h
src/dawn_native/webnn/: BUILD.gn  Context.cpp  Context.h  Error.cpp  Error.h  ErrorData.cpp  ErrorScope.cpp  ErrorScope.h  Forward.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  NamedInputs.h  NamedOperands.h  NamedOutputs.h  ObjectBase.cpp  ObjectBase.h  Operand.cpp  Operand.h  OperandArray.h  Operator.cpp  Operator.h  OperatorArray.h  WebnnNative.cpp  webnn_platform.h
src/dawn_native/webnn/null/: ContextNull.cpp  ContextNull.h
src/dawn_native/webnn/ops/: BatchNorm.cpp  BatchNorm.h  Binary.cpp  Binary.h  Clamp.h  Concat.cpp  Concat.h  Constant.h  Conv2d.cpp  Conv2d.h  Gemm.cpp  Gemm.h  Gru.cpp  Gru.h  Input.h  InstanceNorm.cpp  InstanceNorm.h  LeakyRelu.h  Pad.cpp  Pad.h  Pool2d.cpp  Pool2d.h  Reduce.cpp  Reduce.h  Resample.cpp  Resample.h  Reshape.cpp  Reshape.h  Slice.h  Split.h  Squeeze.h  Transpose.cpp  Transpose.h  Unary.cpp  Unary.h
src/dawn_wire/: WireClient.cpp  WireServer.cpp
src/include/dawn/: webnn_proc.h
src/include/dawn/webnn/: webnn_proc.h
src/include/dawn_native/: MetalBackend.h
src/include/dawn_native/webnn/: WebnnNative.h
src/include/dawn_wire/: WireClient.h  WireServer.h
src/include/webnn/: webnn.h  webnn_cpp.h  webnn_thread_dispatch_proc.h
src/include/webnn/webnn_native/: WebnnNative.h
src/tests/unittests/: EnumClassBitmasksTests.cpp  GetProcAddressTests.cpp
src/tests/webnn/: BUILD.gn
src/tests/webnn/unittests/: ErrorTests.cpp  ObjectBaseTests.cpp
src/tests/webnn/unittests/validation/: BinaryValidationTests.cpp  GraphValidationTests.cpp  PoolValidationTests.cpp  ReshapeValidationTests.cpp  TransposeValidationTests.cpp  UnaryValidationTests.cpp  ValidationTest.cpp  ValidationTest.h
src/webnn/: BUILD.gn  webnn_generator.gni
src/webnn/tests/: BUILD.gn
src/webnn/tests/unittests/: ErrorTests.cpp
src/webnn/tests/unittests/validation/: BinaryValidationTests.cpp  Conv2dValidationTests.cpp  ErrorScopeValidationTests.cpp  ValidationTest.cpp  ValidationTest.h
src/webnn/webnn_native/: BUILD.gn  Context.cpp  Context.h  Error.cpp  Error.h  ErrorData.cpp  ErrorScope.cpp  ErrorScope.h  Graph.cpp  Graph.h  GraphBuilder.cpp  GraphBuilder.h  NamedInputs.h  NamedOperands.h  NamedOutputs.h  NamedRecords.h  ObjectBase.cpp  ObjectBase.h  Operand.cpp  Operand.h  OperandArray.h  Operator.cpp  Operator.h  OperatorArray.h  WebnnNative.cpp  WebnnProcTable.cpp  webnn_platform.h
src/webnn/webnn_native/null/: ContextNull.cpp  ContextNull.h
src/webnn/webnn_native/ops/: BatchNorm.cpp  BatchNorm.h  Binary.cpp  Binary.h  Clamp.h  Concat.cpp  Concat.h  Constant.h  Conv2d.cpp  Conv2d.h  Gemm.cpp  Gemm.h  Gru.cpp  Gru.h  Input.h  InstanceNorm.cpp  InstanceNorm.h  LeakyRelu.h  Pad.cpp  Pad.h  Pool2d.cpp  Pool2d.h  Reduce.cpp  Reduce.h  Resample.cpp  Resample.h  Reshape.cpp  Reshape.h  Slice.h  Split.h  Squeeze.h  Transpose.cpp  Transpose.h  Unary.cpp  Unary.h
